syntax = "proto3";
package seiprotocol.seichain.mev;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/mev/types";

// Msg defines the mev module's gRPC message service
service Msg {
  rpc SubmitBundle(MsgSubmitBundle) returns (MsgSubmitBundleResponse);
}

// MsgSubmitBundle represents a message to submit a bundle of transactions
message MsgSubmitBundle {
  string sender = 1 [(gogoproto.moretags) = "yaml:\"sender\""];
  repeated bytes txs = 2 [(gogoproto.moretags) = "yaml:\"txs\""];
  uint64 block_num = 3 [(gogoproto.moretags) = "yaml:\"block_num\""];
  int64 timestamp = 4 [(gogoproto.moretags) = "yaml:\"timestamp\""];
}

// MsgSubmitBundleResponse defines the response structure
message MsgSubmitBundleResponse {
  bool success = 1 [(gogoproto.moretags) = "yaml:\"success\""];
}
